--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "react",
   "version": "1.0.0",
-  "description": "",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,5 +19,9 @@
     "del": "^2.0.2",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "react_fakhri"
   }
 }
